monolithic-objects/src/main/java/com/ttulka/blog/samples/bad/product/Products.java
package com.ttulka.blog.samples.bad.product;

import java.util.Collection;

public interface Products {

    Collection<Product> findAll();

    Product findById(ProductId id);
}
